--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -14,6 +14,64 @@ abstract="Many image analysis tasks involve the automatic segmentation and count
 isbn="978-3-030-44584-3"
 }
 
+@article{Annie_Stuart_What_2022_webmd,
+	author	={Annie Stuart What},
+	title	={Acute Lymphoblastic Leukemia (ALL): Symptoms, Diagnosis, Treatment, Prognosis, and Survival Rate},
+	year	={2022},
+	url	={https://www.webmd.com/cancer/lymphoma/acute-lymphoblastic-leukemia}
+}﻿@Article{Kouzehkanan2022,
+author={Kouzehkanan, Zahra Mousavi
+and Saghari, Sepehr
+and Tavakoli, Sajad
+and Rostami, Peyman
+and Abaszadeh, Mohammadjavad
+and Mirzadeh, Farzaneh
+and Satlsar, Esmaeil Shahabi
+and Gheidishahran, Maryam
+and Gorgi, Fatemeh
+and Mohammadi, Saeed
+and Hosseini, Reshad},
+title={A large dataset of white blood cells containing cell locations and types, along with segmented nuclei and cytoplasm},
+journal={Scientific Reports},
+year={2022},
+month={Jan},
+day={21},
+volume={12},
+number={1},
+pages={1123},
+abstract={Accurate and early detection of anomalies in peripheral white blood cells plays a crucial role in the evaluation of well-being in individuals and the diagnosis and prognosis of hematologic diseases. For example, some blood disorders and immune system-related diseases are diagnosed by the differential count of white blood cells, which is one of the common laboratory tests. Data is one of the most important ingredients in the development and testing of many commercial and successful automatic or semi-automatic systems. To this end, this study introduces a free access dataset of normal peripheral white blood cells called Raabin-WBC containing about 40,000 images of white blood cells and color spots. For ensuring the validity of the data, a significant number of cells were labeled by two experts. Also, the ground truths of the nuclei and cytoplasm are extracted for 1145 selected cells. To provide the necessary diversity, various smears have been imaged, and two different cameras and two different microscopes were used. We did some preliminary deep learning experiments on Raabin-WBC to demonstrate how the generalization power of machine learning methods, especially deep neural networks, can be affected by the mentioned diversity. Raabin-WBC as a public data in the field of health can be used for the model development and testing in different machine learning tasks including classification, detection, segmentation, and localization.},
+issn={2045-2322},
+doi={10.1038/s41598-021-04426-x},
+url={https://doi.org/10.1038/s41598-021-04426-x}
+}
+
+@article{SUDHA2020639,
+title = {A novel approach for segmentation and counting of overlapped leukocytes in microscopic blood images},
+journal = {Biocybernetics and Biomedical Engineering},
+volume = {40},
+number = {2},
+pages = {639-648},
+year = {2020},
+issn = {0208-5216},
+doi = {https://doi.org/10.1016/j.bbe.2020.02.005},
+url = {https://www.sciencedirect.com/science/article/pii/S0208521620300267},
+author = {K. Sudha and P. Geetha},
+keywords = {Leukocytes, Microscopic blood images, Edge strength, Grabcut technique, Gradient circular hough transform},
+abstract = {Leukocytes count in the blood smear images plays an important role in identifying the overall health of the patient. The major steps involved in leukocytes counting system are segmentation and counting. However, the counting accuracy is greatly affected due to the morphological diversity of cells, the presence of staining artifacts and the overlapped cells. Therefore, this paper introduces a new framework to segment and counting of leukocytes. To segment leukocytes, an edge strength-based Grabcut method has been proposed. Later, the leukocyte region including the overlapped cells was counted using the novel gradient circular hough transform (GCHT) method. The research work was performed on ALL-IDB and Cellavision datasets. The proposed segmentation method has yielded high precision, recall and f-measure compared to the state-of-the-art methods. Additionally, comparison analysis was performed between the region count obtained using the existing and the GCHT method. The overall experimental results of the work showed that the proposed framework produced more accuracy in counting the leukocytes.}
+}
+
+@article{Zheng2018,
+  title={Fast and Robust Segmentation of White Blood Cell Images by Self-supervised Learning},
+  author={Xin Zheng and Yong Wang and Guoyou Wang and Jianguo Liu},
+  journal={Micron},
+  volume={107},
+  pages={55--71},
+  year={2018},
+  publisher={Elsevier},
+  doi={https://doi.org/10.1016/j.micron.2018.01.010},
+  url={https://www.sciencedirect.com/science/article/pii/S0968432817303037}
+}
+
 @article{DBLP:journals/corr/abs-1802-10548,
   author    = {Carlos X. Hern{\'{a}}ndez and
                Mohammad M. Sultan and
@@ -72,32 +130,6 @@ isbn="978-3-030-44584-3"
   year={2016}
 }
 
-﻿@Article{Kouzehkanan2022,
-author={Kouzehkanan, Zahra Mousavi
-and Saghari, Sepehr
-and Tavakoli, Sajad
-and Rostami, Peyman
-and Abaszadeh, Mohammadjavad
-and Mirzadeh, Farzaneh
-and Satlsar, Esmaeil Shahabi
-and Gheidishahran, Maryam
-and Gorgi, Fatemeh
-and Mohammadi, Saeed
-and Hosseini, Reshad},
-title={A large dataset of white blood cells containing cell locations and types, along with segmented nuclei and cytoplasm},
-journal={Scientific Reports},
-year={2022},
-month={Jan},
-day={21},
-volume={12},
-number={1},
-pages={1123},
-abstract={Accurate and early detection of anomalies in peripheral white blood cells plays a crucial role in the evaluation of well-being in individuals and the diagnosis and prognosis of hematologic diseases. For example, some blood disorders and immune system-related diseases are diagnosed by the differential count of white blood cells, which is one of the common laboratory tests. Data is one of the most important ingredients in the development and testing of many commercial and successful automatic or semi-automatic systems. To this end, this study introduces a free access dataset of normal peripheral white blood cells called Raabin-WBC containing about 40,000 images of white blood cells and color spots. For ensuring the validity of the data, a significant number of cells were labeled by two experts. Also, the ground truths of the nuclei and cytoplasm are extracted for 1145 selected cells. To provide the necessary diversity, various smears have been imaged, and two different cameras and two different microscopes were used. We did some preliminary deep learning experiments on Raabin-WBC to demonstrate how the generalization power of machine learning methods, especially deep neural networks, can be affected by the mentioned diversity. Raabin-WBC as a public data in the field of health can be used for the model development and testing in different machine learning tasks including classification, detection, segmentation, and localization.},
-issn={2045-2322},
-doi={10.1038/s41598-021-04426-x},
-url={https://doi.org/10.1038/s41598-021-04426-x}
-}
-
 @inproceedings{labati2011all,
   title={All-IDB: The acute lymphoblastic leukemia image database for image processing},
   author={Labati, Ruggero Donida and Piuri, Vincenzo and Scotti, Fabio},
@@ -105,6 +137,15 @@ url={https://doi.org/10.1038/s41598-021-04426-x}
   pages={2045--2048},
   year={2011},
   organization={IEEE}
+}
+
+@article{li2021robust,
+  title={Robust Blood Cell Image Segmentation Method Based on Neural Ordinary Differential Equations},
+  author={Li, Dongming and Tang, Peng and Zhang, Run and Sun, Changming and Li, Yong and Qian, Jingning and Liang, Yan and Yang, Jinhua and Zhang, Lijuan},
+  journal={Computational and Mathematical Methods in Medicine},
+  volume={2021},
+  year={2021},
+  publisher={Hindawi}
 }
 
 @article{ljosa2012annotated,
@@ -143,19 +184,13 @@ abstract = {Yeast fluorescence microscopic images are widely used to observe the
   year={2014}
 }
 
-@article{SUDHA2020639,
-title = {A novel approach for segmentation and counting of overlapped leukocytes in microscopic blood images},
-journal = {Biocybernetics and Biomedical Engineering},
-volume = {40},
-number = {2},
-pages = {639-648},
-year = {2020},
-issn = {0208-5216},
-doi = {https://doi.org/10.1016/j.bbe.2020.02.005},
-url = {https://www.sciencedirect.com/science/article/pii/S0208521620300267},
-author = {K. Sudha and P. Geetha},
-keywords = {Leukocytes, Microscopic blood images, Edge strength, Grabcut technique, Gradient circular hough transform},
-abstract = {Leukocytes count in the blood smear images plays an important role in identifying the overall health of the patient. The major steps involved in leukocytes counting system are segmentation and counting. However, the counting accuracy is greatly affected due to the morphological diversity of cells, the presence of staining artifacts and the overlapped cells. Therefore, this paper introduces a new framework to segment and counting of leukocytes. To segment leukocytes, an edge strength-based Grabcut method has been proposed. Later, the leukocyte region including the overlapped cells was counted using the novel gradient circular hough transform (GCHT) method. The research work was performed on ALL-IDB and Cellavision datasets. The proposed segmentation method has yielded high precision, recall and f-measure compared to the state-of-the-art methods. Additionally, comparison analysis was performed between the region count obtained using the existing and the GCHT method. The overall experimental results of the work showed that the proposed framework produced more accuracy in counting the leukocytes.}
+@article{shahzad2020robust,
+  title={Robust method for semantic segmentation of whole-slide blood cell microscopic images},
+  author={Shahzad, Muhammad and Umar, Arif Iqbal and Khan, Muazzam A and Shirazi, Syed Hamad and Khan, Zakir and Yousaf, Waqas},
+  journal={Computational and Mathematical Methods in Medicine},
+  volume={2020},
+  year={2020},
+  publisher={Hindawi}
 }
 
 @article{tran2019blood,
@@ -163,17 +198,5 @@ abstract = {Leukocytes count in the blood smear images plays an important role i
   author={Tran, Thanh and Minh, Lam Binh and Lee, Suk-Hwan and Kwon, Ki-Ryong},
   year={2019},
   publisher={Preprints}
-}
-
-@article{Zheng2018,
-  title={Fast and Robust Segmentation of White Blood Cell Images by Self-supervised Learning},
-  author={Xin Zheng and Yong Wang and Guoyou Wang and Jianguo Liu},
-  journal={Micron},
-  volume={107},
-  pages={55--71},
-  year={2018},
-  publisher={Elsevier},
-  doi={https://doi.org/10.1016/j.micron.2018.01.010},
-  url={https://www.sciencedirect.com/science/article/pii/S0968432817303037}
 }
 
