--- a/PFE/latex/tables/table1.tex
+++ b/PFE/latex/tables/table1.tex
@@ -1,6 +1,7 @@
 % Please add the following required packages to your document preamble:
 % \usepackage[table,xcdraw]{xcolor}
 % If you use beamer only pass "xcolor=table" option, i.e. \documentclass[xcolor=table]{beamer}
+\begin{table}[H]
 \begin{fullwidth}[leftmargin=-4.5em]
 \resizebox{49.2em}{!}{\begin{tabular}{|l|cc|c|c|c|c|c|}
 \hline
@@ -22,3 +23,5 @@
 \textbf{\begin{tabular}[c]{@{}l@{}}Overton\\ et al\end{tabular}}    & \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}DO-U-Net}                                                                                       & \begin{tabular}[c]{@{}c@{}}Marching Squares \\ Algorithm\end{tabular}                                          & 188x188                                                            & \multicolumn{2}{c|}{\cellcolor[HTML]{C0C0C0}98.31\%}                                                                                                                                           & 10 / 5                                                            & ALL-IDB1                                                          \\ \hline
 \end{tabular}}
 \end{fullwidth}
+\caption{table that represents a comparative study between state of the art methods}
+\end{table}
