Added blood cells definition.

--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -42,7 +42,12 @@ isbn="978-3-030-44584-3"
   publisher={IEEE}
 }
 
-@article{bhavnani2016segmentation,
+@article{Annie_Stuart_What_2022_webmd,
+	author	={Annie Stuart What},
+	title	={Acute Lymphoblastic Leukemia (ALL): Symptoms, Diagnosis, Treatment, Prognosis, and Survival Rate},
+	year	={2022},
+	url	={https://www.webmd.com/cancer/lymphoma/acute-lymphoblastic-leukemia}
+}@article{bhavnani2016segmentation,
   title={Segmentation and counting of WBCs and RBCs from microscopic blood sample images},
   author={Bhavnani, Lata A and Jaliya, Udesang K and Joshi, Mahasweta J},
   journal={International Journal of Image, Graphics and Signal Processing},
@@ -70,6 +75,13 @@ isbn="978-3-030-44584-3"
   volume={17},
   number={38},
   year={2016}
+}
+
+@article{hopkins1993human,
+  title={Human Biology and Health},
+  author={Hopkins, Jean and Maton, Anthea and Charles, WM and Susan, J and Maryanna, QW and David, L and Jill, DW},
+  journal={New Jersey: Englewood Cliffs},
+  year={1993}
 }
 
 ﻿@Article{Kouzehkanan2022,
@@ -105,6 +117,15 @@ url={https://doi.org/10.1038/s41598-021-04426-x}
   pages={2045--2048},
   year={2011},
   organization={IEEE}
+}
+
+@article{li2021robust,
+  title={Robust Blood Cell Image Segmentation Method Based on Neural Ordinary Differential Equations},
+  author={Li, Dongming and Tang, Peng and Zhang, Run and Sun, Changming and Li, Yong and Qian, Jingning and Liang, Yan and Yang, Jinhua and Zhang, Lijuan},
+  journal={Computational and Mathematical Methods in Medicine},
+  volume={2021},
+  year={2021},
+  publisher={Hindawi}
 }
 
 @article{ljosa2012annotated,
@@ -156,6 +177,15 @@ url = {https://www.sciencedirect.com/science/article/pii/S0208521620300267},
 author = {K. Sudha and P. Geetha},
 keywords = {Leukocytes, Microscopic blood images, Edge strength, Grabcut technique, Gradient circular hough transform},
 abstract = {Leukocytes count in the blood smear images plays an important role in identifying the overall health of the patient. The major steps involved in leukocytes counting system are segmentation and counting. However, the counting accuracy is greatly affected due to the morphological diversity of cells, the presence of staining artifacts and the overlapped cells. Therefore, this paper introduces a new framework to segment and counting of leukocytes. To segment leukocytes, an edge strength-based Grabcut method has been proposed. Later, the leukocyte region including the overlapped cells was counted using the novel gradient circular hough transform (GCHT) method. The research work was performed on ALL-IDB and Cellavision datasets. The proposed segmentation method has yielded high precision, recall and f-measure compared to the state-of-the-art methods. Additionally, comparison analysis was performed between the region count obtained using the existing and the GCHT method. The overall experimental results of the work showed that the proposed framework produced more accuracy in counting the leukocytes.}
+}
+
+@article{shahzad2020robust,
+  title={Robust method for semantic segmentation of whole-slide blood cell microscopic images},
+  author={Shahzad, Muhammad and Umar, Arif Iqbal and Khan, Muazzam A and Shirazi, Syed Hamad and Khan, Zakir and Yousaf, Waqas},
+  journal={Computational and Mathematical Methods in Medicine},
+  volume={2020},
+  year={2020},
+  publisher={Hindawi}
 }
 
 @article{tran2019blood,
