Added RBCs and WBCs definitions.

--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -47,7 +47,16 @@ isbn="978-3-030-44584-3"
 	title	={Acute Lymphoblastic Leukemia (ALL): Symptoms, Diagnosis, Treatment, Prognosis, and Survival Rate},
 	year	={2022},
 	url	={https://www.webmd.com/cancer/lymphoma/acute-lymphoblastic-leukemia}
-}@article{bhavnani2016segmentation,
+}
+
+@article{Attacking_Any_Unknown_2022_clevelandclinic,
+author = {Attacking Any Unknown},
+title	 = {White Blood Cells: What Are They, Normal Ranges, Role \& Function},
+year	 = {2022},
+url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
+}
+
+@article{bhavnani2016segmentation,
   title={Segmentation and counting of WBCs and RBCs from microscopic blood sample images},
   author={Bhavnani, Lata A and Jaliya, Udesang K and Joshi, Mahasweta J},
   journal={International Journal of Image, Graphics and Signal Processing},
@@ -68,6 +77,13 @@ isbn="978-3-030-44584-3"
   year={2011}
 }
 
+@article{Department_2022_rochester,
+author = {Department},
+title  = {What Are Red Blood Cells? - Health Encyclopedia - University of Rochester Medical Center},
+year	 = {2022},
+url	   = {https://www.urmc.rochester.edu/encyclopedia/content.aspx?ContentID=34&ContentTypeID=160}
+}
+
 @article{guiliang2016microscopic,
   title={Microscopic Cell Image Segmentation and Counting Algorithm Based on Image Definition.},
   author={Guiliang, FENG and Yiping, LU and Wei, PENG},
@@ -84,7 +100,7 @@ isbn="978-3-030-44584-3"
   year={1993}
 }
 
-﻿@Article{Kouzehkanan2022,
+@Article{Kouzehkanan2022,
 author={Kouzehkanan, Zahra Mousavi
 and Saghari, Sepehr
 and Tavakoli, Sajad
