Added platelets definition.

--- a/PFE/latex/chap0.tex
+++ b/PFE/latex/chap0.tex
@@ -9,7 +9,7 @@ A blood cell, also called a hematopoietic cell, hemocyte, or hematocyte, is a ce
 \begin{figure}[h]
 \centering
   \vspace{-0.1in}
-    \centerline{\fbox{\includegraphics[width = 3in, height = 3in]{../images/blood_cells.png}}}
+    \centerline{\fbox{\includegraphics[width = 4in, height = 3.1in]{../images/BloodCells.jpg}}}
     \caption{Blood cells}
 \end{figure}
 
@@ -22,7 +22,11 @@ The hemoglobin is the protein found inside the red blood cell, and it's main pur
 
 Most people don't think about their red blood cells unless they have a disease that affects these cells. Problems with red blood cells can be caused by illnesses or a lack of iron or vitamins. Some diseases of the red blood cells are inherited.
 
-Diseases of the red blood cells include many types of anemia. This is a condition in which there are too few red blood cells to carry enough oxygen all over the body. People with anemia may have red blood cells that have an abnormal shape or that look normal, larger than normal, or smaller than normal.
+Diseases of the red blood cells include many types of anemia. This is a condition in which there are too few red blood cells to carry enough oxygen all over the body.
+
+\newpage
+
+People with anemia may have red blood cells that have an abnormal shape or that look normal, larger than normal, or smaller than normal.
 
 Symptoms of anemia include tiredness, fast heart rate, pale skin, feeling cold, and, in severe cases, heart failure. Children who don't have enough healthy red blood cells grow and develop more slowly than other children. These symptoms show how important red blood cells are to your daily life. \textsuperscript{\cite{Department_2022_rochester}}
 
@@ -40,4 +44,24 @@ White Blood Cells are divided into five types:
   \item \textbf{Monocytes:} Defend against infection by cleaning up damaged cells.
 \end{itemize}
 
+\vspace{0.1in}
+
+\begin{figure}[H]
+\centering
+  \vspace{-0.1in}
+    \centerline{\fbox{\includegraphics[width = 3.1in, height = 2.5in]{../images/white_blood_cells.jpg}}}
+    \caption{The five types of White Blood Cells}
+\end{figure}
+
 \subsection{Platelets}
+
+Platelets help prevent blood loss at sites of vascular injury. To do this, they adhere, aggregate and form a procoagulant surface favorizing thrombin generation and fibrin formation. In addition, platelets express and release substances that promote tissue repair and influence processes such as angiogenesis, inflammation and the immune response. They contain large secretable pools of biologically active proteins, while newly synthesized active metabolites are also released. \textsuperscript{\cite{nurden2008platelets}}
+
+\vspace{0.2in}
+
+\begin{figure}[h]
+\centering
+  \vspace{-0.1in}
+    \centerline{\fbox{\includegraphics[width = 3.1in, height = 2.5in]{../images/platelets.jpg}}}
+    \caption{Platelets}
+\end{figure}
