--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -154,6 +154,16 @@ url={https://doi.org/10.1038/s41598-021-04426-x}
   year={2012}
 }
 
+@article{nurden2008platelets,
+  title={Platelets and wound healing},
+  author={Nurden, Alan T and Nurden, Paquita and Sanchez, Mikel and Andia, Isabel and Anitua, Eduardo and others},
+  journal={Front Biosci},
+  volume={13},
+  number={9},
+  pages={3532--48},
+  year={2008}
+}
+
 @article{Kong:20,
 author = {Yan Kong and Hui Li and Yongyong Ren and Georgi Z. Genchev and Xiaolei Wang and Hongyu Zhao and Zhiping Xie and Hui Lu},
 journal = {OSA Continuum},
