--- a/ressources/bibtex/Attacking_Any_Unknown_2022_clevelandclinic.bib
+++ b/ressources/bibtex/Attacking_Any_Unknown_2022_clevelandclinic.bib
@@ -1,6 +1,6 @@
 @article{Attacking_Any_Unknown_2022_clevelandclinic,
 author = {Attacking Any Unknown},
-title	 = {White Blood Cells: What Are They, Normal Ranges, Role & Function},
+title	 = {White Blood Cells: What Are They, Normal Ranges, Role \& Function},
 year	 = {2022},
 url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
 }
