Added another approach to the comparison table and fixed it's size

--- a/PFE/latex/chap2.tex
+++ b/PFE/latex/chap2.tex
@@ -15,7 +15,7 @@ The ALL-IDB1 can be used for segmentation or classification with image processin
 
 \begin{figure}[H]
 \centering
-\includegraphics{ALLIDB1}
+\includegraphics{../images/ALLIDB1.jpg}
 \caption{Examples of the images contained in ALL-IDB1: healthy cells from non-ALL patients (a,b,c), probable lymphoblasts from ALL patients (d,e,f). }
 \end{figure}
 
@@ -27,28 +27,28 @@ The ALL-IDB1 can be used for segmentation or classification with image processin
 \begin{figure}[H]
 \begin{minipage}[b]{0.35\linewidth}
 \centering
-\includegraphics{Im006_1}
+\includegraphics{../images/Im006_1.jpg}
 \subcaption{Im006\_1.jpg}
 \label{fig:Im006.jpg}
 \end{minipage}
 \hfill
 \begin{minipage}[b]{0.3\linewidth}
 \centering
-\lstinputlisting[breaklines]{images/Im006\_1.xyc}
+\lstinputlisting[breaklines]{../images/Im006\_1.xyc}
 \subcaption{Im006\_1.xyc}
 \label{fig:Im006.xyc}
 \end{minipage}
 
 \begin{minipage}[b]{0.35\linewidth}
 \centering
-\includegraphics[width=57mm]{Im033_1}
+\includegraphics[width=57mm]{../images/Im033_1.jpg}
 \subcaption{Im033\_1.jpg}
 \label{fig:Im033.jpg}
 \end{minipage}
 \hfill
 \begin{minipage}[b]{0.3\linewidth}
 \centering
-\lstinputlisting[breaklines]{images/Im033\_1.xyc}
+\lstinputlisting[breaklines]{../images/Im033\_1.xyc}
 \subcaption{Im033\_1.xyc}
 \label{fig:Im033.xyc}
 \end{minipage}
@@ -61,7 +61,7 @@ if we plot the coordinates in the Img006\_1.xyc (figure \ref{fig:Im006.jpg}) fil
 
 \begin{figure}[H]
 \centering
-\includegraphics{images/img006.xyc.jpg}
+\includegraphics{../images/img006.xyc.jpg}
 \caption{coordinates from Img006\_1.xyc ploted on Img006\_1.jpg}
 \label{fig:Im006.xyc.jpg}
 \end{figure}
@@ -75,7 +75,7 @@ This dataset has been created for testing the performances of classification sys
 
 \begin{figure}[H]
 \centering
-\includegraphics{images/ALL-IDB2.jpg}
+\includegraphics{../images/ALL-IDB2.jpg}
 \caption{Examples of the images contained in ALL-IDB2: healthy cells from non-ALL patients (a-d), probable lymphoblasts from ALL patients (e-h).}
 \label{fig:ALL-IDB2}
 \end{figure}
