--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -7,6 +7,7 @@
 \usepackage{graphicx}
 \usepackage{subcaption}
 \usepackage[table,xcdraw,dvipsnames]{xcolor}
+\usepackage{lscape}
 \usepackage{titlesec}
 \usepackage{titletoc}
 \usepackage{titling}
@@ -453,7 +454,7 @@ This thesis is presented in four chapters:\\
 
 \newpage
 
-% \input{chap2.tex}
+\input{chap2.tex}
 
 \vspace*{\fill}
 \begin{center}
