--- a/PFE/latex/tables/table1.tex
+++ b/PFE/latex/tables/table1.tex
@@ -1,27 +1,84 @@
-% Please add the following required packages to your document preamble:
-% \usepackage[table,xcdraw]{xcolor}
-% If you use beamer only pass "xcolor=table" option, i.e. \documentclass[xcolor=table]{beamer}
 \begin{table}[H]
-\begin{fullwidth}[leftmargin=-4.5em]
-\resizebox{49.2em}{!}{\begin{tabular}{|l|cc|c|c|c|c|c|}
+\centering
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{|
+>{\columncolor[HTML]{FFFFFF}}l |
+>{\columncolor[HTML]{FFFFFF}}c 
+>{\columncolor[HTML]{FFFFFF}}c |
+>{\columncolor[HTML]{FFFFFF}}c |
+>{\columncolor[HTML]{FFFFFF}}c 
+>{\columncolor[HTML]{FFFFFF}}c |
+>{\columncolor[HTML]{FFFFFF}}c |
+>{\columncolor[HTML]{FFFFFF}}c |}
 \hline
-\rowcolor[HTML]{9B9B9B} 
-\multicolumn{1}{|c|}{\cellcolor[HTML]{9B9B9B}\textbf{Reference}}    & \multicolumn{1}{c|}{\cellcolor[HTML]{9B9B9B}\textbf{\begin{tabular}[c]{@{}c@{}}Segmentation \\ Approach\end{tabular}}}                      & \textbf{\begin{tabular}[c]{@{}c@{}}Counting \\ Approach\end{tabular}}                                          & \textbf{\begin{tabular}[c]{@{}c@{}}Input Img\\  Size\end{tabular}} & \multicolumn{1}{c|}{\cellcolor[HTML]{9B9B9B}\textbf{\begin{tabular}[c]{@{}c@{}}Segmentation \\ Accuracy\end{tabular}}} & \textbf{\begin{tabular}[c]{@{}c@{}}Counting \\ Accuracy\end{tabular}} & \textbf{\begin{tabular}[c]{@{}c@{}}Database \\ Size\end{tabular}} & \textbf{\begin{tabular}[c]{@{}c@{}}Database \\ Name\end{tabular}} \\ \hline
-\rowcolor[HTML]{C0C0C0} 
-\textbf{\begin{tabular}[c]{@{}l@{}}Kimbahune \\ et al\end{tabular}} & \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}PCNN}                                                                                           & Square tracing method                                                                                          & N/A                                                                & \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}N/A}                                                                       & N/A                                                                   & N/A                                                               & N/A                                                               \\ \hline
-\rowcolor[HTML]{C0C0C0} 
-\textbf{\begin{tabular}[c]{@{}l@{}}Bhavnani \\ et al\end{tabular}}  & \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}\begin{tabular}[c]{@{}c@{}}OTsu's thresholding \\ and morphological \\ operations\end{tabular}} & \begin{tabular}[c]{@{}c@{}}1-Circular Hough \\ Transfer\\ 2-Watershed Algorithm\end{tabular}                   & \begin{tabular}[c]{@{}c@{}}2594x1944,\\ 1712x1368\end{tabular}     & \multicolumn{2}{c|}{\cellcolor[HTML]{C0C0C0}\begin{tabular}[c]{@{}c@{}}1- 92.67\%\\ 2- 91.07\%\end{tabular}}                                                                                   & 20 / 108                                                          & ALLIDB                                                            \\ \hline
-\rowcolor[HTML]{C0C0C0} 
-\textbf{\begin{tabular}[c]{@{}l@{}}Carlos \\ et al\end{tabular}}    & \multicolumn{2}{c|}{\cellcolor[HTML]{C0C0C0}\begin{tabular}[c]{@{}c@{}}FPN combined with VGG style \\ neural network\end{tabular}}                                                                                                                           & 256x196                                                            & \multicolumn{2}{c|}{\cellcolor[HTML]{C0C0C0}81.75\%}                                                                                                                                           & 80 / 20                                                           & BBBC005                                                           \\ \hline
-\rowcolor[HTML]{C0C0C0} 
-\textbf{\begin{tabular}[c]{@{}l@{}}Tran \\ et al\end{tabular}}      & \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}\begin{tabular}[c]{@{}c@{}}SegNet with weights\\  froma pre-trained \\ VGG-16\end{tabular}}     & \begin{tabular}[c]{@{}c@{}}Distance Transform \\ and Connected \\ component labeling \\ algorithm\end{tabular} & \begin{tabular}[c]{@{}c@{}}360x480x3\\ (RGB)\end{tabular}          & \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}98.5\%}                                                                    & 97.29\%                                                               & 380 / 32                                                          & ALL-IDB1                                                          \\ \hline
-\rowcolor[HTML]{C0C0C0} 
-\textbf{\begin{tabular}[c]{@{}l@{}}K. Sudha \\ et al\end{tabular}}  & \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}\begin{tabular}[c]{@{}c@{}}Edge strength-based \\ Grabcut\end{tabular}}                         & \begin{tabular}[c]{@{}c@{}}Gradient Circular \\ Hough Transform\end{tabular}                                   & 256x256                                                            & \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}99.32\%}                                                                   & 97.3\%                                                                & \begin{tabular}[c]{@{}c@{}}130 + 54\\ 1080 + 60\end{tabular}      & \begin{tabular}[c]{@{}c@{}}ALL-IDB\\ Cellavision\end{tabular}     \\ \hline
-\rowcolor[HTML]{C0C0C0} 
-\textbf{\begin{tabular}[c]{@{}l@{}}Yan Kong \\ et al\end{tabular}}  & \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}\begin{tabular}[c]{@{}c@{}}Two parallel modified \\ U-Nets\end{tabular}}                        & \begin{tabular}[c]{@{}c@{}}Seed Guided Water-\\ Mesh Algorithm\end{tabular}                                    & 224x224                                                            & \multicolumn{2}{c|}{\cellcolor[HTML]{C0C0C0}99.74\%}                                                                                                                                           & 3310 / 1050                                                       & \begin{tabular}[c]{@{}c@{}}Self \\ Annotated\end{tabular}         \\ \hline
-\rowcolor[HTML]{C0C0C0} 
-\textbf{\begin{tabular}[c]{@{}l@{}}Overton\\ et al\end{tabular}}    & \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}DO-U-Net}                                                                                       & \begin{tabular}[c]{@{}c@{}}Marching Squares \\ Algorithm\end{tabular}                                          & 188x188                                                            & \multicolumn{2}{c|}{\cellcolor[HTML]{C0C0C0}98.31\%}                                                                                                                                           & 10 / 5                                                            & ALL-IDB1                                                          \\ \hline
-\end{tabular}}
-\end{fullwidth}
-\caption{table that represents a comparative study between state of the art methods}
+\multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}\textbf{Reference}} &
+  \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}c@{}}Segmentation\\ Approach\end{tabular}}} &
+  \textbf{\begin{tabular}[c]{@{}c@{}}Counting\\ Approach\end{tabular}} &
+  \textbf{\begin{tabular}[c]{@{}c@{}}Image\\ Size\end{tabular}} &
+  \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\textbf{\begin{tabular}[c]{@{}c@{}}Segmentation\\ Accuracy\end{tabular}}} &
+  \textbf{\begin{tabular}[c]{@{}c@{}}Counting\\ Accuracy\end{tabular}} &
+  \textbf{\begin{tabular}[c]{@{}c@{}}Database\\ Size\end{tabular}} &
+  \textbf{\begin{tabular}[c]{@{}c@{}}Database\\ Name\end{tabular}} \\ \hline
+\textbf{\begin{tabular}[c]{@{}l@{}}Kimbahune\\ et al\end{tabular}} &
+  \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}PCNN} &
+  Square tracing method &
+  N/A &
+  \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}N/A} &
+  N/A &
+  N/A &
+  N/A \\ \hline
+\textbf{\begin{tabular}[c]{@{}l@{}}Guiliang, FENG\\ et al.\end{tabular}} &
+  \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}Discrete Cosine Transform (DCT)} &
+  N/A &
+  \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}90\%} &
+  N/A &
+  N/A \\ \hline
+\textbf{\begin{tabular}[c]{@{}l@{}}Bhavnani\\ et al\end{tabular}} &
+  \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}OTsu's thresholding \\ and morphological\\ operations\end{tabular}} &
+  \begin{tabular}[c]{@{}c@{}}1-Circular Hough\\ Transfer\\ 2-Watershed Algorithm\end{tabular} &
+  \begin{tabular}[c]{@{}c@{}}2594x1944\\ 1712x1368\end{tabular} &
+  \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}1- 92.67\%\\ 2- 91.07\%\end{tabular}} &
+  20 / 108 &
+  ALLIDB \\ \hline
+\textbf{\begin{tabular}[c]{@{}l@{}}Carlos\\ et al\end{tabular}} &
+  \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}FPN combined with VGG style\\ neural network\end{tabular}} &
+  256x196 &
+  \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}95\%} &
+   &
+  80 / 20 &
+  BBBC005 \\ \hline
+\textbf{\begin{tabular}[c]{@{}l@{}}Tran, Thanh \\ and\\ Minh et al\end{tabular}} &
+  \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}SegNet with weights\\ from a pre-trained\\ VGG-16\end{tabular}} &
+  \begin{tabular}[c]{@{}c@{}}Distance Transform\\ and connected\\ component labeling\\ algorithm\end{tabular} &
+  \begin{tabular}[c]{@{}c@{}}360x480x3\\ (RGB)\end{tabular} &
+  \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}98.5\%} &
+  97.29\% &
+  380 / 32 &
+  ALL-IDB1 \\ \hline
+\textbf{\begin{tabular}[c]{@{}l@{}}K. Sudha and\\ P. Geetha\end{tabular}} &
+  \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Edge strength-based\\ Grabcut\end{tabular}} &
+  \begin{tabular}[c]{@{}c@{}}Gradient Circular\\ Hough Transform\end{tabular} &
+  256x256 &
+  \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}99.32\%} &
+  97.3\% &
+   &
+  ALL-IDB \\ \hline
+\textbf{\begin{tabular}[c]{@{}l@{}}Yan Kong\\ et al\end{tabular}} &
+  \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Two parallel\\ modified U-Nets\end{tabular}} &
+  \begin{tabular}[c]{@{}c@{}}Seed Guided Water-\\ Mesh Algorithm\end{tabular} &
+  224x224 &
+  \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}96\%} &
+  3310 / 1050 &
+  Self Annotated \\ \hline
+\textbf{\begin{tabular}[c]{@{}l@{}}Overton, Toyah\\ and\\ Tucker, Allan\end{tabular}} &
+  \multicolumn{1}{c|}{\cellcolor[HTML]{FFFFFF}DO-U-Net} &
+  \begin{tabular}[c]{@{}c@{}}Marching Squares\\ Algorithm\end{tabular} &
+  188x188 &
+  \multicolumn{2}{c|}{\cellcolor[HTML]{FFFFFF}98.31\%} &
+  10 / 5 &
+  ALL-IDB1 \\ \hline
+\end{tabular}%
+}
+\caption{}
+\label{Table that represents a comparative study of previous methods}
 \end{table}
