--- a/PFE/latex/chap2.tex
+++ b/PFE/latex/chap2.tex
@@ -134,7 +134,7 @@ In this case, a human produces a binary (black and white but in some cases thy u
 \caption{Sample data from the BBBC4 Database with mask as ground truth}
 \end{figure}
 
-\subsection{Outlines of of individual objects}
+\subsection{Outlines of individual objects}
 In this case, a human outlines each cell in the image in order to indicate which pixels belong to which cell. The ground truth is provided as binary images, with black outlines on a white background.
 
 \begin{figure}[H]
@@ -167,7 +167,38 @@ Bounding boxes are rectangles completely enclosing an object.
 
 \section{WBC Image Dataset : Fast and Robust Segmentation of White Blood Cell Images by Self-supervised Learning}
 This is two datasets of white blood cell (WBC) images used for “Fast and Robust Segmentation of White Blood Cell Images by Self-supervised Learning”, which can be used to evaluate cell image segmentation methods \textsuperscript{\cite{Zheng2018}}.
-contains
+This collection contains two datasets different from each other in terms of the image color, cell shape, background, etc. The ground truth segmentation results are manually sketched by domain experts, where the nuclei, cytoplasms and background including red blood cells are marked in white, gray and black respectively. 
+
+\subsection{Dataset 1}
+was obtained from Jiangxi Tecom Science Corporation \textsuperscript{\cite{2022_tecom-cn}}, China. It contains three hundred 120×120 images of WBCs and their color depth is 24 bits. The images were taken by a Motic Moticam Pro 252A optical microscope camera with a N800-D motorized auto-focus microscope.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=\linewidth]{../images/WBC_Dataset1.png}
+\caption{Sample data from WBC\_Segmentaion Dataset 1}
+\label{fig:WBC_Dataset1_sample}
+\end{figure}
+
+\subsection{Dataset 2}
+consists of one hundred 300×300 color images, which were collected from the CellaVision blog \textsuperscript{\cite{2022_cellavision}}. The cell images are generally purple and may contain many red blood cells around the white blood cells.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=\linewidth]{../images/WBC_Dataset2.png}
+\caption{Sample data from WBC\_Segmentaion Dataset 2}
+\label{fig:WBC_Dataset2_sample}
+\end{figure}
+
+
+\subsection{Annotation}
+The class labels of each image in Dataset 1 and Dataset 2 are stored in csv files . The labels (1- 5) represent neutrophil, lymphocyte, monocyte, eosinophil and basophil, respectively.
+
+
+\subsection{A large dataset of white blood cells containing cell locations and types, along with segmented nuclei and cytoplasm}
+
+
+\subsection{BCCD}
+
 
 \newpage
 \section{Conclusion}
