--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -77,6 +77,13 @@ url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
   year={2011}
 }
 
+@article{Clicking_On_2022_mayoclinic,
+author = {Clicking On},
+title	 = {Complete blood count (CBC) - Mayo Clinic},
+year	 = {2022},
+url	   = {https://www.mayoclinic.org/tests-procedures/complete-blood-count/about/pac-20384919}
+}
+
 @article{Department_2022_rochester,
 author = {Department},
 title  = {What Are Red Blood Cells? - Health Encyclopedia - University of Rochester Medical Center},
