Updated folder layout.

--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -72,7 +72,7 @@
 \renewcommand{\thesection}{\arabic{section}}
 
 % Renaming Bibliography name
-\renewcommand\bibname{Bibliographie}
+\renewcommand\bibname{References}
 
 % Bibliography styling
 \bibliographystyle{plain}
@@ -408,17 +408,17 @@ This thesis is presented in four chapters:\\
 \begin{center}
     {\color{Black} \rule{\linewidth}{1.2mm} }\\
 \vspace{0.25in}
- {\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapitre 0 : Blood cell}}}}}
+{\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter I : Blood cells \& artificial intelligence}}}}}
 \vspace{0.35in}\\
     {\color{Black} \rule{\linewidth}{1.2mm} }
 \end{center}
 \vspace*{\fill}
-\addcontentsline{toc}{chapter}{\color{Black}{Chapitre 0 : Blood cell}}
+\addcontentsline{toc}{chapter}{\color{Black}{Chapter I : Blood cells \& artificial intelligence}}
 \setcounter{section}{0}
 
 \newpage
 
-\input{chap0.tex}
+\input{chap1.tex}
 
 \newpage
 
@@ -426,46 +426,46 @@ This thesis is presented in four chapters:\\
 \begin{center}
     {\color{Black} \rule{\linewidth}{1.2mm} }\\
 \vspace{0.25in}
- {\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapitre I : Etat de l'art}}}}}
+ {\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter II : State of the art}}}}}
 \vspace{0.35in}\\
     {\color{Black} \rule{\linewidth}{1.2mm} }
 \end{center}
 \vspace*{\fill}
-\addcontentsline{toc}{chapter}{\color{Black}{Chapitre I : Etat de l'art}}
-\setcounter{section}{0}
-
-\newpage
-
-\input{./chap1.tex}
-
-\newpage
-
-\vspace*{\fill}
-\begin{center}
-    {\color{Black} \rule{\linewidth}{1.2mm} }\\
-\vspace{0.25in}
-    {\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter II : Dataset Collection}}}}}
-\vspace{0.35in}\\
-    {\color{Black} \rule{\linewidth}{1.2mm} }
-\end{center}
-\vspace*{\fill}
-\addcontentsline{toc}{chapter}{\color{Black}{Chapter II : Dataset Collection}}
+\addcontentsline{toc}{chapter}{\color{Black}{Chapter II : State of the art}}
 \setcounter{section}{0}
 
 \newpage
 
 \input{chap2.tex}
 
+\newpage
+
 \vspace*{\fill}
 \begin{center}
     {\color{Black} \rule{\linewidth}{1.2mm} }\\
 \vspace{0.25in}
-    {\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapitre III : Implémentation}}}}}
+    {\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter III : Dataset Collection}}}}}
 \vspace{0.35in}\\
     {\color{Black} \rule{\linewidth}{1.2mm} }
 \end{center}
 \vspace*{\fill}
-\addcontentsline{toc}{chapter}{\color{Black}{Chapitre III : Implémentation}}
+\addcontentsline{toc}{chapter}{\color{Black}{Chapter III : Dataset Collection}}
+\setcounter{section}{0}
+
+\newpage
+
+\input{chap3.tex}
+
+\vspace*{\fill}
+\begin{center}
+    {\color{Black} \rule{\linewidth}{1.2mm} }\\
+\vspace{0.25in}
+    {\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter IV : Implementation}}}}}
+\vspace{0.35in}\\
+    {\color{Black} \rule{\linewidth}{1.2mm} }
+\end{center}
+\vspace*{\fill}
+\addcontentsline{toc}{chapter}{\color{Black}{Chapter IV : Implementation}}
 \setcounter{section}{0}
 
 \newpage
@@ -485,11 +485,11 @@ This thesis is presented in four chapters:\\
 \begin{center}
     {\color{Black} \rule{5.5in}{1.4mm} }\\
     \vspace{0.1in}
-    \scshape{\fontsize{34}{46}{\bfseries{\color{Black}{Conclusion générale}}}}
+    \scshape{\fontsize{34}{46}{\bfseries{\color{Black}{General Conclusion}}}}
     \\
     \vspace{0.5in}
 \end{center}
-\addcontentsline{toc}{chapter}{\vspace{-0.12in}\color{Black}{Conclusion générale}}
+\addcontentsline{toc}{chapter}{\vspace{-0.12in}\color{Black}{General Conclusion}}
 \hspace*{0.16in}
 
 \newpage
